--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: RestartMe
 main: restartme\RestartMe
 version: 1.3.0
-api: [1.10.0, 2.0.0]
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6, 3.0.0-ALPHA7, 3.0.0, 3.0.1]
 load: STARTUP
-author: Gamecrafter
+author: Gamecrafter & Zeao
 description: Make sure your server stays up all the time!
 website: https://github.com/Viperize/RestartMe-PocketMine
 permissions:
